--- a/oo-design/User-Exercise/TODO.txt
+++ b/oo-design/User-Exercise/TODO.txt
@@ -1,5 +1,7 @@
-Exercise: Classes and Objects User --[1]-> Mail
+Exercise: Classes and Objects 
 --------------------------------------------------------------------------------
+
+User --[1]-> Mail
 
 Given a class diagram, implement the classes "User" and "Mail" as well as the
 directed association with multiplicity 1 between them.
