--- a/programming-c++/oop/operator-overloading/operator-arithmetic/counter-exercise/TODO.txt
+++ b/programming-c++/oop/operator-overloading/operator-arithmetic/counter-exercise/TODO.txt
@@ -1,28 +1,13 @@
-Exercise: Operator Overloading - Counter
+Exercise: Operator Overloading - Counter (++, --)
 --------------------------------------------------------------------------------
 
-Given the following project structure:
-.
-├── Makefile
-├── include
-│   └── Counter.h
-├── src
-├── test
-│   └── CounterTest.cpp
-└── TODO.txt
+Given the implementation of a "Counter" class.
 
-Create a file named "src/Counter.cpp" and implement the class declaration found in 
-"Counter.h":
+Add the following unary operators to this class: 
 
-> Counter(int value, int min, int max);
-Implement the constructor and check if the passed argument values are correct.
-Pre-conditions: min <= max; min <= value <= max 
-If there are invalid arguments throw the "std::invalid_argument" exception. 
+		void operator ++(int);	// postfix increment operator
+		void operator --(int);	// postfix decrement operator
 
-> void operator ++(int);
-  void operator --(int);
-Overload the increment and decrement operators.
-A Counter object can only be incremented and decremented within its range [min,max]. 
-Note that the int-parameter declares the postfix operation (the parameter value is not
-used in the implementation). 
+Test your implementation withe the test cases implemented in test.cpp.
+
 
