--- a/design-patterns/structural/composite/packaging-teiniker/TODO.txt
+++ b/design-patterns/structural/composite/packaging-teiniker/TODO.txt
@@ -8,7 +8,7 @@ the leaf and composite nodes of the tree structure.
 A) Article (article.h and article.cpp)
 	Write a constructor which initializes the name, weight and quantity of the
 	article.
-	Add the private fields "std::string _name" and "int _quantity".
+	Add the provate fields "std::string _name" and "int _quantity".
 	Add a getter method for name. 
 	Implement the "totalWeight()" method to calculate the total weight of the  
 	article (weight * quantity).
